tests/specs/npm/byonm/not_installed.out
error: Could not find "chalk" in a node_modules folder. Deno expects the node_modules/ directory to be up to date. Did you forget to run `npm install`?
    at file:///[WILDCARD]/not_installed.ts:1:19
