tests/specs/npm/byonm/not_installed.ts
import chalk from "npm:chalk";
console.log(chalk.green("hi"));
